==> qmk/qmk_firmware/quantum/audio/audio_avr.c <==
#include <stdio.h>
#include <string.h>
#    include <avr/pgmspace.h>
#    include <avr/interrupt.h>
#    include <avr/io.h>
#include "print.h"
#include "audio.h"
#include "keymap.h"
#include "wait.h"
#include "eeconfig.h"
#define CPU_PRESCALER 8
#    define CPIN_AUDIO
#    define CPIN_SET_DIRECTION DDRC |= _BV(PORTC6);
#    define INIT_AUDIO_COUNTER_3 TCCR3A = (0 << COM3A1) | (0 << COM3A0) | (1 << WGM31) | (0 << WGM30);
#    define ENABLE_AUDIO_COUNTER_3_ISR TIMSK3 |= _BV(OCIE3A)
#    define DISABLE_AUDIO_COUNTER_3_ISR TIMSK3 &= ~_BV(OCIE3A)
#    define ENABLE_AUDIO_COUNTER_3_OUTPUT TCCR3A |= _BV(COM3A1);
#    define DISABLE_AUDIO_COUNTER_3_OUTPUT TCCR3A &= ~(_BV(COM3A1) | _BV(COM3A0));
#    define TIMER_3_PERIOD ICR3
#    define TIMER_3_DUTY_CYCLE OCR3A
#    define TIMER3_AUDIO_vect TIMER3_COMPA_vect
#    define CPIN_AUDIO
#    define CPIN_SET_DIRECTION DDRC |= _BV(PORTC5);
#    define INIT_AUDIO_COUNTER_3 TCCR3A = (0 << COM3B1) | (0 << COM3B0) | (1 << WGM31) | (0 << WGM30);
#    define ENABLE_AUDIO_COUNTER_3_ISR TIMSK3 |= _BV(OCIE3B)
#    define DISABLE_AUDIO_COUNTER_3_ISR TIMSK3 &= ~_BV(OCIE3B)
#    define ENABLE_AUDIO_COUNTER_3_OUTPUT TCCR3A |= _BV(COM3B1);
#    define DISABLE_AUDIO_COUNTER_3_OUTPUT TCCR3A &= ~(_BV(COM3B1) | _BV(COM3B0));
#    define TIMER_3_PERIOD ICR3
#    define TIMER_3_DUTY_CYCLE OCR3B
#    define TIMER3_AUDIO_vect TIMER3_COMPB_vect
#    define CPIN_AUDIO
#    define CPIN_SET_DIRECTION DDRC |= _BV(PORTC4);

void audio_init() {
    // Check EEPROM
    if (!eeconfig_is_enabled()) {
        eeconfig_init();
    }
    audio_config.raw = eeconfig_read_audio();

    if (!audio_initialized) {
// Set audio ports as output
#ifdef CPIN_AUDIO
        CPIN_SET_DIRECTION
        DISABLE_AUDIO_COUNTER_3_ISR;
#endif
#ifdef BPIN_AUDIO
        BPIN_SET_DIRECTION
        DISABLE_AUDIO_COUNTER_1_ISR;
#endif

// TCCR3A / TCCR3B: Timer/Counter #3 Control Registers TCCR3A/TCCR3B, TCCR1A/TCCR1B
// Compare Output Mode (COM3An and COM1An) = 0b00 = Normal port operation
//   OC3A -- PC6
//   OC3B -- PC5
//   OC3C -- PC4
//   OC1A -- PB5
//   OC1B -- PB6
//   OC1C -- PB7

// Waveform Generation Mode (WGM3n) = 0b1110 = Fast PWM Mode 14. Period = ICR3, Duty Cycle OCR3A)
//   OCR3A - PC6
//   OCR3B - PC5
//   OCR3C - PC4
//   OCR1A - PB5
//   OCR1B - PB6
//   OCR1C - PB7

// Clock Select (CS3n) = 0b010 = Clock / 8
#ifdef CPIN_AUDIO
        INIT_AUDIO_COUNTER_3
        TCCR3B             = (1 << WGM33) | (1 << WGM32) | (0 << CS32) | (1 << CS31) | (0 << CS30);
        TIMER_3_PERIOD     = (uint16_t)(((float)F_CPU) / (440 * CPU_PRESCALER));
        TIMER_3_DUTY_CYCLE = (uint16_t)((((float)F_CPU) / (440 * CPU_PRESCALER)) * note_timbre);
#endif
#ifdef BPIN_AUDIO
        INIT_AUDIO_COUNTER_1
        TCCR1B             = (1 << WGM13) | (1 << WGM12) | (0 << CS12) | (1 << CS11) | (0 << CS10);
        TIMER_1_PERIOD     = (uint16_t)(((float)F_CPU) / (440 * CPU_PRESCALER));
        TIMER_1_DUTY_CYCLE = (uint16_t)((((float)F_CPU) / (440 * CPU_PRESCALER)) * note_timbre);
#endif

        audio_initialized = true;
    }

    if (audio_config.enable) {
        PLAY_SONG(startup_song);
    }
}

void stop_all_notes() {
    dprintf("audio stop all notes");

    if (!audio_initialized) {
        audio_init();
    }
    voices = 0;

#ifdef CPIN_AUDIO
    DISABLE_AUDIO_COUNTER_3_ISR;
    DISABLE_AUDIO_COUNTER_3_OUTPUT;
#endif

#ifdef BPIN_AUDIO
    DISABLE_AUDIO_COUNTER_1_ISR;
    DISABLE_AUDIO_COUNTER_1_OUTPUT;
#endif

    playing_notes = false;
    playing_note  = false;
    frequency     = 0;
    frequency_alt = 0;
    volume        = 0;

    for (uint8_t i = 0; i < 8; i++) {
        frequencies[i] = 0;
        volumes[i]     = 0;
    }
}

void stop_note(float freq) {
    dprintf("audio stop note freq=%d", (int)freq);

    if (playing_note) {
        if (!audio_initialized) {
            audio_init();
        }
        for (int i = 7; i >= 0; i--) {
            if (frequencies[i] == freq) {
                frequencies[i] = 0;
                volumes[i]     = 0;
                for (int j = i; (j < 7); j++) {
                    frequencies[j]     = frequencies[j + 1];
                    frequencies[j + 1] = 0;
                    volumes[j]         = volumes[j + 1];
                    volumes[j + 1]     = 0;
                }
                break;
            }
        }
        voices--;
        if (voices < 0) voices = 0;
        if (voice_place >= voices) {
            voice_place = 0;
        }
        if (voices == 0) {
#ifdef CPIN_AUDIO
            DISABLE_AUDIO_COUNTER_3_ISR;
            DISABLE_AUDIO_COUNTER_3_OUTPUT;
#endif
#ifdef BPIN_AUDIO
            DISABLE_AUDIO_COUNTER_1_ISR;
            DISABLE_AUDIO_COUNTER_1_OUTPUT;
#endif
            frequency     = 0;
            frequency_alt = 0;
            volume        = 0;
            playing_note  = false;
        }
    }
}

void play_note(float freq, int vol) {
    dprintf("audio play note freq=%d vol=%d", (int)freq, vol);

    if (!audio_initialized) {
        audio_init();
    }

    if (audio_config.enable && voices < 8) {
#ifdef CPIN_AUDIO
        DISABLE_AUDIO_COUNTER_3_ISR;
#endif
#ifdef BPIN_AUDIO
        DISABLE_AUDIO_COUNTER_1_ISR;
#endif

        // Cancel notes if notes are playing
        if (playing_notes) stop_all_notes();

        playing_note = true;

        envelope_index = 0;

        if (freq > 0) {
            frequencies[voices] = freq;
            volumes[voices]     = vol;
            voices++;
        }

#ifdef CPIN_AUDIO
        ENABLE_AUDIO_COUNTER_3_ISR;
        ENABLE_AUDIO_COUNTER_3_OUTPUT;
#endif
#ifdef BPIN_AUDIO
#    ifdef CPIN_AUDIO
        if (voices > 1) {
            ENABLE_AUDIO_COUNTER_1_ISR;
            ENABLE_AUDIO_COUNTER_1_OUTPUT;
        }
#    else
        ENABLE_AUDIO_COUNTER_1_ISR;
        ENABLE_AUDIO_COUNTER_1_OUTPUT;
#    endif
#endif
    }
}

void play_notes(float (*np)[][2], uint16_t n_count, bool n_repeat) {
    if (!audio_initialized) {
        audio_init();
    }

    if (audio_config.enable) {
#ifdef CPIN_AUDIO
        DISABLE_AUDIO_COUNTER_3_ISR;
#endif
#ifdef BPIN_AUDIO
        DISABLE_AUDIO_COUNTER_1_ISR;
#endif

        // Cancel note if a note is playing
        if (playing_note) stop_all_notes();

        playing_notes = true;

        notes_pointer = np;
        notes_count   = n_count;
        notes_repeat  = n_repeat;

        place        = 0;
        current_note = 0;

        note_frequency = (*notes_pointer)[current_note][0];
        note_length    = ((*notes_pointer)[current_note][1] / 4) * (((float)note_tempo) / 100);
        note_position  = 0;

#ifdef CPIN_AUDIO
        ENABLE_AUDIO_COUNTER_3_ISR;
        ENABLE_AUDIO_COUNTER_3_OUTPUT;
#endif
#ifdef BPIN_AUDIO
#    ifndef CPIN_AUDIO
        ENABLE_AUDIO_COUNTER_1_ISR;
        ENABLE_AUDIO_COUNTER_1_OUTPUT;
#    endif
#endif
    }
}
